--- a/.config/emacs/emacs.org
+++ b/.config/emacs/emacs.org
@@ -116,12 +116,13 @@ By default, Emacs saves backup files (the files ending with =~=) in the current 
 * Package management
 
 #+name: package-archives-table
-| id           | enabled | description                                                                                                                   | priority |
-|--------------+---------+-------------------------------------------------------------------------------------------------------------------------------+----------|
-| [[https://elpa.gnu.org/packages/][gnu]]          | y       | The [[https://elpa.gnu.org/][GNU Emacs Lisp Package Archive repository]], contains FSF-sanctioned Emacs packages                                         |       90 |
-| [[https://elpa.nongnu.org/nongnu/][nongnu]]       | y       | NonGNU ELPA is a [[https://www.gnu.org/philosophy/free-sw.html][free software]] Emacs Lisp Package Archive (ELPA) with extensions to [[https://www.gnu.org/software/emacs/][GNU Emacs]] Archive                         |       70 |
-| [[https://melpa.org/packages/][melpa]]        | y       | [[https://melpa.org/packages/][Milkypostman’s Emacs Lisp Package Archive]], built from the latest package source code                                          |       80 |
-| [[https://stable.melpa.org/packages/][melpa-stable]] | y       | [[https://melpa.org/packages/][Milkypostman’s Emacs Lisp Package Archive]], built from the latest tagged code in those repositories, where version tags exist. |        0 |
+| id                                                   | enabled | description                                                                                                                   | priority |
+|------------------------------------------------------+---------+-------------------------------------------------------------------------------------------------------------------------------+----------|
+| [[https://elpa.gnu.org/packages/][gnu]]              | y       | The GNU Emacs Lisp Package Archive repository, contains FSF-sanctioned Emacs packages                                         |       90 |
+| [[https://elpa.gnu.org/devel/][gnu-devel]]           | y       | GNU-devel ELPA Packages                                                                                                       |          |
+| [[https://elpa.nongnu.org/nongnu/][nongnu]]          | y       | NonGNU ELPA is a free software Emacs Lisp Package Archive (ELPA) with extensions to GNU Emacs Archive                         |       70 |
+| [[https://melpa.org/packages/][melpa]]               | y       | Milkypostman’s Emacs Lisp Package Archive, built from the latest package source code                                          |       80 |
+| [[https://stable.melpa.org/packages/][melpa-stable]] | n       | Milkypostman’s Emacs Lisp Package Archive, built from the latest tagged code in those repositories, where version tags exist. |        0 |
 
 #+begin_src emacs-lisp :var table=package-archives-table :results code :tangle no :exports both
   (let* ((enabled-archives (remove-if (lambda (row) (not (equal (nth 1 row) "y"))) table))
@@ -147,8 +148,8 @@ By default, Emacs saves backup files (the files ending with =~=) in the current 
 #+begin_src emacs-lisp
 (setq package-archives
       '(("gnu" . "https://elpa.gnu.org/packages/")
+	("gnu-devel" . "https://elpa.gnu.org/devel/")
 	("melpa" . "https://melpa.org/packages/")
-	("melpa-stable" . "https://stable.melpa.org/packages/")
 	("nongnu" . "https://elpa.nongnu.org/nongnu/")))
 #+end_src
 
